# cp_news_classifier

./: .gitignore  Dockerfile  README.md  README.rst  Statement_of_work.rst  docker-compose.yaml  pyproject.toml  requirements.txt  setup.py
data/: tickers_public_news.json
kattana_news/: __init__.py  config.yaml  main.py  model.py
notebooks/: data.csv  fit_model.ipynb  model_res.ipynb  predict_model.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
tests/: test_kattana_news.py  test_model.py  test_service.py
