[tool.poetry]
name = "kattana-news"
version = "29.3.16"
description = "Model news classification"
authors = ["Alex-Lekov <61644712+Alex-Lekov@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pandas = "^1.4.1"
transformers = "^4.17.0"
tensorflow = "^2.8.0"
tensorflow-addons = "^0.16.1"
fastapi = "^0.75.0"
uvicorn = "^0.17.6"
pydantic = "^1.9.0"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.1.0"
poetry2setup = "^1.0.0"
matplotlib = "^3.5.1"
tqdm = "^4.63.0"
scikit-learn = "^1.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
